--- a/Magazynier/appsettings.json
+++ b/Magazynier/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "WarehouseDataBaseConnection": "Data Source=WIN-M4TFKCSRRDC\\OPTIMA;Initial Catalog=WarehouseProcesses;User ID=szachownica;Password=M@nieczki22"    
+  }
 }
