before Add Command
przed dodaniem command put i delete

--- a/Magazynier.AplicationServices/Magazynier.AplicationServices.csproj
+++ b/Magazynier.AplicationServices/Magazynier.AplicationServices.csproj
@@ -15,4 +15,9 @@
     <ProjectReference Include="..\Magazynier.DataAccess\Magazynier.DataAccess.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="API\Domain\PUT\" />
+    <Folder Include="API\Handlers\PUT\" />
+  </ItemGroup>
+
 </Project>
